<resources>
    <string name="app_name">點名系統</string>
    <string name="teacher_button">教師</string>
    <string name="student_button">學生</string>
    <string name="manage_course">課程列表</string>
    <string name="course_roll_call">點名</string>
    <string name="course_statistics">統計</string>
    <string name="course_setting">設定</string>
    <string name="course_name">課程名稱</string>
    <string name="add_course">新增課程</string>
    <string name="edit_course">修改課程</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_course_name">名稱</string>
    <string name="editor_insert_course_failed">課程新增失敗</string>
    <string name="editor_insert_course_successful">課程新增成功</string>
    <string name="editor_update_course_failed">課程更新失敗</string>
    <string name="editor_update_course_successful">課程更新成功</string>
    <string name="delete_dialog_msg_course">是否刪除此課程?</string>
    <string name="delete">刪除</string>
    <string name="cancel">取消</string>
    <string name="editor_delete_course_failed">刪除失敗</string>
    <string name="editor_delete_course_successful">刪除成功</string>
    <string name="delete_dialog_msg_all_course">是否刪除所有課程?</string>
    <string name="student_list">學生名單</string>
    <string name="student_name">學生名稱</string>
    <string name="hint_student_name">姓名</string>
    <string name="student_number">學號</string>
    <string name="hint_student_number">學號</string>
    <string name="student_address">裝置識別碼</string>
    <string name="hint_student_address">識別碼</string>
</resources>
